@@ -47,6 +47,9 @@ command=--read-from-file 4,micro-finance.sh
 name=micro-finance-improved
 name=mfi
 command=--read-from-file 4,micro-finance-improved.sh
+name=qualified-seed
+name=qs
+command=--read-from-file 4,rin-tin-tin.sh
 name=rin-tin-tin
 name=rtt
 command=--read-from-file 4,rin-tin-tin.sh
